deployments/mealie/ingressroutes.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mealie-redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie-http
spec:
  entryPoints: ["web"]
  routes:
    - match: Host(`mealie.seadogger-homelab`)
      kind: Rule
      middlewares:
        - name: mealie-redirect-https
      services:
        - name: mealie
          port: 9000

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie-https
spec:
  entryPoints: ["websecure"]
  routes:
    - match: Host(`mealie.seadogger-homelab`)
      kind: Rule
      services:
        - name: mealie
          port: 9000
  tls:
    secretName: mealie-local-tls
